Some Corrections in hrml and css file

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <div>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, id dolorum quibusdam
                             voluptatum rerum accusamus.</p>
-                        <h3>Uravasi Ratula</h3>
+                        <h3>Urvashi Rautela</h3>
                     </div>
 
                 </div>
@@ -270,7 +270,7 @@
                     <div>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, id dolorum quibusdam
                             voluptatum rerum accusamus.</p>
-                        <h3>Uravasi Ratula</h3>
+                        <h3>Selena Gomez</h3>
                     </div>
 
                 </div>
@@ -290,7 +290,27 @@
                     <div>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, id dolorum quibusdam
                             voluptatum rerum accusamus.</p>
-                        <h3>Uravasi Ratula</h3>
+                        <h3>Nowrin Priya</h3>
+                    </div>
+
+                </div>
+
+                <div class="image-separate">
+
+                    <div class="image-size">
+                        <img src="images/luser4.jpg" alt="">
+                    </div>
+                    <div class="ratings">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, id dolorum quibusdam
+                            voluptatum rerum accusamus.</p>
+                        <h3>Otilia Bilionera</h3>
                     </div>
 
                 </div>
